--- a/notebooks/Exploratory_analysis.ipynb
+++ b/notebooks/Exploratory_analysis.ipynb
@@ -348,8 +348,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "No reply domainates the dataset<br>\n",
-    "Reply that says No are greater than reply saying yes"
+    "No reply domainates the dataset.<br>\n",
+    "Reply that says No are greater than reply saying yes."
    ]
   },
   {
