--- a/notebooks/Exploratory_analysis.ipynb
+++ b/notebooks/Exploratory_analysis.ipynb
@@ -10,19 +10,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import seaborn as sns\n",
     "import numpy as np\n",
-    "from matplotlib import pyplot as plt"
+    "import pandas as pd\n",
+    "import scipy.stats as stats\n",
+    "import statsmodels.stats.api as sms\n",
+    "import matplotlib as mpl\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from math import ceil"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +160,7 @@
        "4  Generic Smartphone            6          Chrome Mobile    0   0  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -630,6 +634,13 @@
     "- Experiment has 0.015 correlation between saying no\n",
     "         "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
