--- a/notebooks/A_B_testing.ipynb
+++ b/notebooks/A_B_testing.ipynb
@@ -577,12 +577,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "S"
+    "# Sequential A/B testing"
    ]
   },
   {
