--- a/notebooks/A_B_testing.ipynb
+++ b/notebooks/A_B_testing.ipynb
@@ -573,7 +573,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since the obtained p-value is 0.043 , which is lower than the alpha of 0.05, the null hypothesis is rejected . This means that there is a significant difference between the control group and the exposed group"
+    "Since the obtained p-value is 0.44 , which is not lower than the alpha of 0.05, the null hypothesis is accepted. This means that there is no significant difference between the control group and the exposed group"
    ]
   },
   {
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -719,6 +719,13 @@
     "            truncated=np.nan\n",
     "        return (outcome,n, k,l,u,truncated,truncate_decision,x1,r,stats,limits)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
